--- a/www/js/ui/templates/menu.html
+++ b/www/js/ui/templates/menu.html
@@ -18,7 +18,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/todo/create">
+        <ion-item menu-close href="#/tasks/create">
           Create task
         </ion-item>
       </ion-list>
