--- a/www/js/task/templates/taskCreate.html
+++ b/www/js/task/templates/taskCreate.html
@@ -1,17 +1,17 @@
-<ion-view view-title="Create Task">
+<ion-view>
     <ion-content>
       <div class="list">
         <label class="item item-input item-stacked-label">
-          <span class="input-label">Title</span>
-          <input type="text" placeholder="What's the title?" ng-model="taskCreateCtrl.task.title">
+          <span class="input-label">Titolo</span>
+          <input type="text" placeholder="Qual'è il titolo dell' attività ?" ng-model="taskCreateCtrl.task.title">
         </label>
         <label class="item item-input item-stacked-label">
-          <span class="input-label">Description</span>
-          <input type="text" placeholder="and the description?" ng-model="taskCreateCtrl.task.description">
+          <span class="input-label">Descrizione</span>
+          <input type="text" placeholder="e la sua descrizione ?" ng-model="taskCreateCtrl.task.description">
         </label>
       </div>
     </ion-content>
-    <div class="bar bar-footer bar-balanced" ng-click="taskCreateCtrl.save()">
-      <div class="title">Save</div>
+    <div class="bar bar-footer bar-assertive" ng-click="taskCreateCtrl.save()">
+      <div class="title">Salva</div>
     </div>
   </ion-view>
